--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="bg-container" onclick="start()">
         <h1 class="title">What will you choose?</h1>
+        <h1 class = "title">TRUTH or DARE</h1>
+        <h1 class = "title">Tap on screen to turn the bottle...</h1>
         <div class="img-container">
             <img src="https://res.cloudinary.com/dkjfwp61k/image/upload/v1691230681/bottlle_ww1fsw.png" id="bottle" class="bottle-img" />
         </div>
