--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Truth or Dare</title>
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dkjfwp61k/image/upload/v1691251452/wine_uuyafj.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
